--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,19 @@
   --white : #fff;
 }
 
+html{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+
+
+  
+}
 *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+}
+body{
+  overflow-x: hidden;
 }
